# SecureMail

./: .gitignore  Dockerfile  README.md  app.py  baseline.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  start.sh  tasks.py
server/: app.py  main.py
tests/: test_grader.py  test_server.py
