[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SecureMail"
version = "1.0.0"
description = "A mini RL environment for phishing email detection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "RL rebels" }
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.0.0",
  "httpx>=0.27.0",
  "openai>=1.30.0",
  "streamlit>=1.35.0",
  "pytest>=8.0.0",
]
